test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_new_expr.draco
proc main() void : a := new(int); corp;

