test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_new_expr_non_type_arg.draco
proc main() void : a := new(a+1); corp;

